# search_engine_rust

./: Cargo.toml  README.md
src/: crawler.rs  main.rs  process_query.rs  text_processing.rs
