[package]
name = "rust_search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3" 
tokio = { version = "1.12.0", features = ["full"] } 
reqwest = "0.11.18"
scraper = "0.17.1"
regex = "1.5.4"
url = "2.4.0"
polars = "0.31.1"
ndarray = "0.15.6"